--- a/BE-test/pom.xml
+++ b/BE-test/pom.xml
@@ -33,6 +33,10 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <junit-jupiter-api.version>5.7.2</junit-jupiter-api.version>
         <jackson.version>2.12.3</jackson.version>
+        <junit-jupiter-params.version>5.7.2</junit-jupiter-params.version>
+        <rest-assured.version>4.4.0</rest-assured.version>
+        <commons-io.version>1.3.2</commons-io.version>
+        <lombok.version>1.18.20</lombok.version>
     </properties>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
@@ -45,12 +49,12 @@
         <dependency>
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
-            <version>4.4.0</version>
+            <version>${rest-assured.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-io</artifactId>
-            <version>1.3.2</version>
+            <version>${commons-io.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -70,12 +74,12 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.20</version>
+            <version>${lombok.version}</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
-            <version>5.7.2</version>
+            <version>${junit-jupiter-params.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
