--- a/BE-test/pom.xml
+++ b/BE-test/pom.xml
@@ -60,6 +60,22 @@
                         <reportVersion>2.14.0</reportVersion>
                     </configuration>
                 </plugin>
+            <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-compiler-plugin</artifactId>
+                            <configuration>
+                                <source>8</source>
+                                <target>8</target>
+                            </configuration>
+                        </plugin>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-compiler-plugin</artifactId>
+                            <configuration>
+                                <source>10</source>
+                                <target>10</target>
+                            </configuration>
+                        </plugin>
 
         </plugins>
     </build>
