--- a/BE-test/pom.xml
+++ b/BE-test/pom.xml
@@ -51,8 +51,21 @@
                     <reportVersion>2.14.0</reportVersion>
                 </configuration>
             </plugin>
-
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+        </resources>
     </build>
 <!--    <build>-->
 <!--        <plugins>-->
